--- a/deployment/production/docker/rancher-compose.yml
+++ b/deployment/production/docker/rancher-compose.yml
@@ -19,11 +19,16 @@ services:
         priority: 2
         protocol: http
         service: geoserver
-        source_port: 30008
+        source_port: 33308
         target_port: 8080
+      stickiness_policy:
+        indirect: false
+        mode: insert
+        nocache: false
+        postonly: false
     health_check:
-      response_timeout: 2000
       healthy_threshold: 2
+      response_timeout: 2000
       port: 42
       unhealthy_threshold: 3
       initializing_timeout: 60000
