--- a/deployment/docker/requirements-haitidata.txt
+++ b/deployment/docker/requirements-haitidata.txt
@@ -1,7 +1,8 @@
 git+https://github.com/ppasq/django-osgeo-importer.git
 
 six==1.10
-geonode==2.6.3
+#geonode==2.6.3
+git+https://github.com/GeoNode/geonode.git@2.6.x#egg=geonode
 django-compressor
 django-geonode-client==0.0.23
 django-tastypie==0.14.0
